fix: fix width and spacing of sidebar to pagelayout

--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -5,22 +5,22 @@
     top: 0;
     left: 0;
     height: 100%;
-    width: 15vw;
+    width: 20vw;
     background-color: #a67c52;
+    border-right: 4px solid #633c17;
     padding: 1rem;
     z-index: 1000;
     overflow-y: auto;
     transition: left 0.5s ease;
-    font-family: 'Press Start 2P', sans-serif;
 }
 
 .sidebar.hidden {
-    left: -15vw;
+    left: -20vw;
 }
 
 .toggle-button {
     position: fixed;
-    left: calc(15vw + 10px);
+    left: calc(20vw + 10px);
     top: 1rem;
     background-color: #fdd762;
     border: 2px solid #633c17;
@@ -30,7 +30,7 @@
     font-weight: bold;
     cursor: pointer;
     z-index: 1100;
-    transition: left 0.5s ease;
+    transition: all 0.1s ease, left 0.5s ease;
 }
 
 .sidebar.hidden .toggle-button {
@@ -41,6 +41,7 @@
     list-style: none;
     padding: 0;
     margin-top: 5rem;
+    font-size: 0.75rem;
 }
 
 .sidebar-items li {
@@ -69,7 +70,6 @@
     font-weight: bold;
     padding: 0.5rem;
     cursor: pointer;
-    font-family: inherit;
     color: black;
     border-radius: 5px;
 }
